# ambsite

./: .coveragerc  .env.example  .gitignore  .gitmodules  .htaccess  .pre-commit-config.yaml  CHANGELOG.md  README.md  composer.json  cookie_banner_variants.html  main.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
analytics/: admin.py  models.py  tests.py
analytics/migrations/: 0001_initial.py  0002_lead_delete_webinarlead.py
campaigns/: models.py
campaigns/migrations/: 0001_initial.py
core/: context_processors.py  settings.py  urls.py
landings/: admin.py  middleware.py  models.py  tests.py  urls.py  views.py
landings/migrations/: 0001_initial.py
landings/static/landing/: style.css
landings/static/landings/: style.css
landings/templates/landings/: privacy_policy.html  privacy_policy_simple.html  privacy_policy_technical.html  webinar.html  webinar_thank_you.html
leads/: admin.py  forms.py  models.py  views.py
leads/migrations/: 0001_initial.py
mysite/: settings.py  urls.py
pages/: admin.py  models.py  tests.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_alter_page_page_type_section.py  0003_section_data.py  0004_remove_page_content.py
pages/static/pages/: style.css
pages/templates/pages/: landing.html  modular_landing.html
polls/: admin.py  models.py  views.py
polls/migrations/: 0001_initial.py
private/: tests.py
products/: models.py
products/migrations/: 0001_initial.py
public/: index.php
resources/views/: welcome.blade.php
routes/: web.php
templates/: base.html
templates/admin/: base_site.html
(+1 files in other folders)
