[project]
name = "ambsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "coverage>=7.11.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pre-commit>=4.3.0",
]

[tool.coverage.run]
source = ['.']
omit = [
    '*/migrations/*',
    '*/tests/*',
    '*/venv/*',
    '*/.venv/*',
    'main.py',           # Archivo de ejemplo no usado
    '*/asgi.py',         # Configuración ASGI estándar
    '*/wsgi.py',         # Configuración WSGI estándar
    'manage.py',         # Comando Django
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    # Excluir bloques condicionales de testing/debugging
    'if not settings\.TESTING:',
    'if settings\.DEBUG:',
    # Excluir importaciones (no ejecutables)
    '^from .* import .*',
    '^import .*',
    # Excluir bloques except defensivos que nunca deberían ejecutarse
    'except:',
    'pass',
    # Excluir importación específica que se usa pero coverage no la cuenta
    'from analytics.models import Lead',
]

[tool.coverage.html]
directory = 'htmlcov'

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
